tests/semantic/pass/if_string.c
struct S;

int foo(void){
  if ("bar") {
     return 1;
  }
} 

int main(void) {
  return 0;
}
