tests/semantic/fail/illegal_member_access4.c
struct S {int i;};

int foo(void){return 0;}

int main(void) {
  foo().i;
  return 0;
}
